--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "@googlemaps/js-api-loader": "^1.16.6",
     "axios": "^1.6.7",
     "bootstrap": "^5.3.3",
+    "bootstrap-vue-next": "^0.16.6",
     "dotenv": "^16.4.5",
     "gsap": "^3.12.5",
     "js-cookie": "^3.0.5",
+    "luxon": "^3.4.4",
     "pinia": "^2.1.7",
     "universal-cookie": "^6.1.3",
     "uuid": "^9.0.1",
